# stock_analyzer

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION_SUMMARY.md  Learning_Guide_AI_Semantic_Search.ipynb  RAG_Pipeline_Tutorial.ipynb  README.md  embed_screener_data.py  pyproject.toml  recreate_screener_embeddings.py  requirements.txt  run.py
generated report/: GAIL_Equity_Analysis_Report.html
llm_responses/: response_ADANIENT_company_overview_20260320_004806.txt  response_ADANIENT_company_overview_20260321_132829.txt  response_ADANIENT_conclusion_20260320_005125.txt  response_ADANIENT_conclusion_20260321_133217.txt  response_ADANIENT_investment_thesis_20260320_004920.txt  response_ADANIENT_investment_thesis_20260321_132951.txt  response_ADANIENT_qualitative_analysis_20260320_004804.txt  response_ADANIENT_qualitative_analysis_20260321_132843.txt  response_ADANIENT_quantitative_analysis_20260320_004813.txt  response_ADANIENT_quantitative_analysis_20260321_132830.txt  response_ADANIENT_shareholding_analysis_20260320_004803.txt  response_ADANIENT_shareholding_analysis_20260321_132812.txt  response_ADANIENT_valuation_recommendation_20260320_005026.txt  response_ADANIENT_valuation_recommendation_20260321_133054.txt  response_ASIANPAINT_company_overview_20260321_140644.txt  response_ASIANPAINT_company_overview_20260321_153358.txt  response_ASIANPAINT_company_overview_20260321_154939.txt  response_ASIANPAINT_company_overview_20260321_160034.txt  response_ASIANPAINT_company_overview_20260321_162204.txt  response_ASIANPAINT_conclusion_20260321_140928.txt  (+70 more)
(+538 files in other folders)
